fixed z-index header

--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,7 @@ body{
     height: 80px;
     line-height: 80px;
     position: fixed;
+    z-index: 1;
 }
 
 .header-menu .logo-header, .header-menu .menu-links{
